--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -40,9 +40,9 @@
           New User
 
       - if flash[:notice]
-        .p-2.rounded.bg-green-900\/30.border.border-green-700.text-green-400.text-sm.mb-4= flash[:notice]
+        %div.p-2.rounded.border.border-green-700.text-green-400.text-sm.mb-4{class: "bg-green-900/30"}= flash[:notice]
       - if flash[:alert]
-        .p-2.rounded.bg-red-900\/30.border.border-red-700.text-red-400.text-sm.mb-4= flash[:alert]
+        %div.p-2.rounded.border.border-red-700.text-red-400.text-sm.mb-4{class: "bg-red-900/30"}= flash[:alert]
 
       .overflow-x-auto
         %table.w-full.text-left.admin-table
@@ -54,6 +54,7 @@
               %th.py-2 Mobile
               %th.py-2 Telegram
               %th.py-2 Role
+              %th.py-2 Status
               %th.py-2.text-right.pr-3 Actions
           %tbody
             - @users.each do |user|
@@ -72,8 +73,16 @@
                     %span.inline-block.px-2.py-0.5.text-xs.rounded-full.bg-yellow-600.text-yellow-100 admin
                   - else
                     %span.inline-block.px-2.py-0.5.text-xs.rounded-full.bg-gray-600.text-gray-200 user
+                %td.py-2
+                  - if user.approved?
+                    %span.inline-block.px-2.py-0.5.text-xs.rounded-full.bg-green-700.text-green-100 approved
+                  - else
+                    %span.inline-block.px-2.py-0.5.text-xs.rounded-full.bg-orange-600.text-orange-100 pending
                 %td.py-2.text-right.pr-3
                   .inline-flex.gap-1.justify-end
+                    - unless user.approved?
+                      = button_to approve_admin_user_path(user), method: :patch, class: "inline-block text-sm px-2 py-1 rounded border border-green-700 text-green-400 hover:text-green-300", form_class: "inline" do
+                        %i.bi.bi-check-lg
                     = link_to edit_admin_user_path(user), class: "inline-block text-sm px-2 py-1 rounded border border-gray-600 text-gray-400 hover:text-gray-200" do
                       %i.bi.bi-pencil
                     - unless user == current_user
