--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -48,6 +48,9 @@
                 %i.bi.bi-box-arrow-right
                 Logout
         - else
+          = link_to register_path, class: "text-sm text-gray-500 hover:text-gray-300" do
+            %i.bi.bi-person-plus.mr-1
+            Register
           = link_to login_path, class: "text-sm text-gray-500 hover:text-gray-300" do
             %i.bi.bi-box-arrow-in-right.mr-1
             Login
